--- a/lab2.cabal
+++ b/lab2.cabal
@@ -1,11 +1,11 @@
 name:                lab2
-version:             1.0.0.0
+version:             1.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/cs256/lab2#readme
+homepage:            https://github.com/fpclass/lab2#readme
 author:              Michael B. Gale
 maintainer:          m.gale@warwick.ac.uk
-copyright:           2017 Michael B. Gale
+copyright:           2018 Michael B. Gale
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
@@ -32,4 +32,4 @@ test-suite lab2-test
 
 source-repository head
   type:     git
-  location: https://github.com/cs256/lab2
+  location: https://github.com/fpclass/lab2
